fix the nurse-images on mobile!

--- a/src/styles/components/NurseCard.scss
+++ b/src/styles/components/NurseCard.scss
@@ -96,39 +96,66 @@
 }
 
 @media screen and (max-width: 480px) {
-  .card-container {
-    width: 100vw;
-    height: 550px;
-    padding-bottom: 60px;
 
-    .image-container {
-      width: 100%;
-      height: 100%;
-      // background-color: red;
-      // border: 2px solid $gray-5;
-      display: flex;
+  .Nurses-container {
+    .Nurses-wrapper {
+      flex-direction: column;
       align-items: center;
-      justify-content: center;
-      .nurse-img {
-        width: 90%;
-        height: 450px;
-        border-radius: 24px;
+      //gap: 2rem;
+      //padding: 2rem 0;
 
-        // border: 1px solid $gray-3;
-        background-size: 100% 100%;
-        background-position: center;
-        opacity: 1;
-        transform: scale(1);
-      }
-      .nurse-animate {
-        background-size: 105% 105%;
-        transition: background-size 0.7s ease-out;
-      }
-    }
-    .details-container {
-      .details-wrapper {
-        width: 95vw;
+      .card-container {
+        width: 90%;
+        max-width: 400px;
+        aspect-ratio: 3/4;
+        height: 550px;
+        padding-bottom: 60px;
+
+        .nurse-img {
+          width: 100%;
+          height: 100%;
+          background-size: cover;
+          background-position: center 2%;
+          border-radius: 16px;
+          // Add if using actual <img> elements:
+          // object-fit: cover;
+        }
       }
     }
   }
+  //.card-container {
+  //  width: 100vw;
+  //  height: 550px;
+  //  padding-bottom: 60px;
+  //
+  //  .image-container {
+  //    width: 100%;
+  //    height: 100%;
+  //    // background-color: red;
+  //    // border: 2px solid $gray-5;
+  //    display: flex;
+  //    align-items: center;
+  //    justify-content: center;
+  //    .nurse-img {
+  //      width: 90%;
+  //      height: 450px;
+  //      border-radius: 24px;
+  //
+  //      // border: 1px solid $gray-3;
+  //      background-size: 100% 100%;
+  //      background-position: center;
+  //      opacity: 1;
+  //      transform: scale(1);
+  //    }
+  //    .nurse-animate {
+  //      background-size: 105% 105%;
+  //      transition: background-size 0.7s ease-out;
+  //    }
+  //  }
+  //  .details-container {
+  //    .details-wrapper {
+  //      width: 95vw;
+  //    }
+  //  }
+  //}
 }
